Fix exporting built-in warnings to yaml

The message didn't have the [checkName] tags

BUG: 411440